Fixed some size units

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ button {
 .attribution {
 	display: flex;
 	justify-content: center;
-	margin-top: 10rem;
+	margin-top: 160px;
 }
 
 /* Mobile Screens */
