Modified some classes

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	width: 1440px;
 }
 
-.flex {
+.table-container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -217,7 +217,7 @@ button {
 		url('./images/bg-bottom.svg') bottom left / 300px 300px no-repeat;
 	}
 
-	.flex {
+	.table-container {
 		flex-direction: column;
 	}
 
